Options for minutes now work Retry for update server added Socket Freeze moved to a thread